# Cost-aware-router

./: README.md  pyproject.toml
data/: cache_aware.sqlite  cost_aware.sqlite  least_queue.sqlite  router_metadata.sqlite  rr.sqlite
data/cost_aware_tuning/: ca_q128_b0_s1_t0p9_seed0.sqlite  ca_q128_b0_s1_t0p9_seed1.sqlite  ca_q128_b0_s1_t0p9_seed2.sqlite  ca_q128_b0_s1_t0p9_seed3.sqlite  ca_q128_b0p5_s1_t0p9_seed0.sqlite  ca_q128_b0p5_s1_t0p9_seed1.sqlite  ca_q128_b0p5_s1_t0p9_seed2.sqlite  ca_q128_b0p5_s1_t0p9_seed3.sqlite  ca_q128_b1_s1_t0p9_seed0.sqlite  ca_q128_b1_s1_t0p9_seed1.sqlite  ca_q128_b1_s1_t0p9_seed2.sqlite  ca_q128_b1_s1_t0p9_seed3.sqlite  ca_q192_b0_s1_t0p9_seed0.sqlite  ca_q192_b0_s1_t0p9_seed1.sqlite  ca_q192_b0_s1_t0p9_seed2.sqlite  ca_q192_b0_s1_t0p9_seed3.sqlite  ca_q192_b0p5_s1_t0p9_seed0.sqlite  ca_q192_b0p5_s1_t0p9_seed1.sqlite  ca_q192_b0p5_s1_t0p9_seed2.sqlite  ca_q192_b0p5_s1_t0p9_seed3.sqlite  (+40 more)
results/: cache_aware_raw.csv  cache_aware_summary.csv  cost_aware_lmcache_raw.csv  cost_aware_lmcache_summary.csv  cost_aware_raw.csv  cost_aware_summary.csv  least_queue_raw.csv  least_queue_summary.csv  prefill_scratch_raw.csv  prefill_scratch_summary.csv  round_robin_raw.csv  round_robin_summary.csv  smoke_raw.csv  smoke_summary.csv
scripts/: check_vllm_servers.sh  compare_cost_aware_vs_scratch.sh  run_all_policies.sh  run_prefill_sensitive_benchmark.sh  run_realistic_experiment.sh  run_router.sh  run_vllm_adapters.sh  run_vllm_servers.sh  run_workers.sh  tune_cost_aware_params.py  tune_cost_aware_params.sh  validate_tuned_full_restart.sh
(+331 files in other folders)
